--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,5 +19,6 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        make test -C 
-        valgrind 
+        make test -C MiniProject_C-main/
+        valgrind ./MiniProject_C/Implementation/build/Test_Washing-Machine-System.out
+
